fix: update homepage with semantic HTML

--- a/index.html
+++ b/index.html
@@ -4,27 +4,40 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Yamin Shihab</title>
-        <meta name="description" content="My very own personal website" />
-        <meta name="author" content="Yamin Shihab" />
+        <meta
+            name="description"
+            content="Hi, I'm Yamin Shihab. I like to work with Linux and write in Rust, C, and more. I also work out, listen to metal, and like reading."
+        />
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
+        <header>
+            <nav>
+                <a href="index.html">Yamin Shihab</a>
+            </nav>
+        </header>
         <main>
-            <h1>Hi, my name's Yamin Shihab</h1>
-            <p>
-                I'm a 16-year-old computer enthusiast and student with a passion
-                for working with Linux systems and developing programs in Rust,
-                C, and other languages.
-            </p>
-            <p>
-                In my free time, I'm a compulsive gym rat, I obsessively listen
-                to all kinds of metal subgenres, and I enjoy reading books.
-            </p>
-            <p>
-                You can primarily find me on
-                <a href="https://github.com/yamhab">GitHub</a> and
-                <a href="https://www.instagram.com/shaminyihab">Instagram</a>.
-            </p>
+            <article>
+                <h1>About Me</h1>
+                <p>
+                    Hi, I'm a 16-year-old computer enthusiast and student with a
+                    passion for working with Linux systems and developing
+                    programs in Rust, C, and other languages.
+                </p>
+                <p>
+                    In my free time, I'm a compulsive gym rat, I obsessively
+                    listen to all kinds of metal subgenres, and I enjoy reading
+                    books.
+                </p>
+                <h2>Contact</h2>
+                <address>
+                    I can be found via
+                    <a href="mailto:yaminshihab123@gmail.com">Email</a>,
+                    <a href="https://github.com/yamhab">GitHub</a>, and
+                    <a href="https://www.instagram.com/shaminyihab">Instagram</a
+                    >.
+                </address>
+            </article>
         </main>
     </body>
 </html>
