feat: post "Hello, World!"

--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
                     <a href="https://www.instagram.com/shaminyihab">Instagram</a
                     >.
                 </address>
+                <h2>Blog</h2>
+                <ul class="blog">
+                    <li>
+                        <time>2025-07-25</time> -
+                        <a href="blog/hello-world.html">Hello, World!</a>
+                    </li>
+                </ul>
             </article>
         </main>
     </body>
