feat: randomize header border color with JavaScript

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             content="Hi, I'm Yamin Shihab. I like to work with Linux and write in Rust, C, and more. I also work out, listen to metal, and like reading."
         />
         <link rel="stylesheet" href="style.css" />
+        <script src="main.js" defer></script>
     </head>
     <body>
         <header>
